--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -86,6 +86,9 @@
         <action
             android:id="@+id/action_folder_more_to_folder_delete_dialog"
             app:destination="@id/folderDeleteDialog" />
+        <action
+            android:id="@+id/action_folder_more_to_folder_add_dialog"
+            app:destination="@id/folderAddDialog" />
     </dialog>
     <dialog
         android:id="@+id/folderDeleteDialog"
