--- a/app/src/main/res/layout/dialog_new_folder_add.xml
+++ b/app/src/main/res/layout/dialog_new_folder_add.xml
@@ -9,6 +9,8 @@
         <variable
             name="viewModel"
             type="com.hyeeyoung.wishboard.viewmodel.FolderViewModel" />
+
+        <import type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -55,7 +57,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/new_folder_container"
+                android:id="@+id/folder_name_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -112,6 +114,19 @@
                     app:layout_constraintBottom_toBottomOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <TextView
+                android:id="@+id/folder_name_detail_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/nanum_square_r"
+                android:text="@string/folder_name_already_exist_toast_text"
+                android:textColor="@color/green_700"
+                android:textSize="12sp"
+                android:visibility="@{viewModel.isExistFolderName == true ? View.VISIBLE : View.INVISIBLE}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/folder_name_container" />
+
             <Button
                 android:id="@+id/add"
                 android:layout_width="match_parent"
@@ -125,7 +140,7 @@
                 android:text="@{viewModel.editMode == true ? @string/edit : @string/add}"
                 android:textColor="@color/selector_dialog_yes_button_text_color"
                 android:textSize="15sp"
-                app:layout_constraintTop_toBottomOf="@id/new_folder_container" />
+                app:layout_constraintTop_toBottomOf="@id/folder_name_detail_text" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
