--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="ultraSemiTransparent">#10000000</color>
     <color name="black_transparent_500">#38000000</color>
 
+    <color name="green_700">#16D924</color>
     <color name="green_500">#73F87C</color>
     <color name="green_100">#EEFEEF</color>
 
