[mod] 아이템 업로드화면에서 price view에 천단위 구분자 적용

--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -90,7 +90,8 @@
                             android:textAlignment="center"
                             android:textColor="@color/black"
                             android:textColorHint="@color/gray_300"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:selection="@{viewModel.itemPrice.length()}" />
 
                         <!-- @brief : 원 표시 추가할지 고민 중-->
                         <!--                <TextView-->
