[mod] background 컬러 white로 적용

--- a/app/src/main/res/layout/item_wish.xml
+++ b/app/src/main/res/layout/item_wish.xml
@@ -14,8 +14,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="@color/white">
+        android:layout_marginBottom="20dp">
 
         <ImageView
             android:id="@+id/item_image"
