--- a/app/src/main/res/layout/dialog_new_folder_add.xml
+++ b/app/src/main/res/layout/dialog_new_folder_add.xml
@@ -22,10 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="10dp"
             android:background="@drawable/background_dialog"
-            android:paddingStart="20dp"
-            android:paddingBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,93 +52,100 @@
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="새 폴더 추가" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/folder_name_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                app:layout_constraintTop_toBottomOf="@id/title">
+                android:padding="20dp"
+                app:layout_constraintTop_toBottomOf="@id/close">
 
-                <!-- TODO 폴더 이미지 삭제 고려 중 -->
-                <!--                <de.hdodenhof.circleimageview.CircleImageView-->
-                <!--                    android:id="@+id/folder_image"-->
-                <!--                    android:layout_width="40dp"-->
-                <!--                    android:layout_height="40dp"-->
-                <!--                    android:src="@mipmap/ic_main"-->
-                <!--                    app:layout_constraintStart_toStartOf="parent"-->
-                <!--                    app:layout_constraintTop_toTopOf="parent" />-->
-
-                <EditText
-                    android:id="@+id/folder_name"
-                    android:layout_width="0dp"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/folder_name_container"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/spacing12"
-                    android:background="@null"
-                    android:fontFamily="@font/nanum_square_b"
-                    android:hint="@string/folder_add_dialog_detail"
-                    android:maxLength="10"
-                    android:onTextChanged="@{viewModel::onFolderNameTextChanged}"
-                    android:paddingVertical="@dimen/spacing12"
-                    android:text="@{viewModel.folderName}"
-                    android:textColor="@color/gray_700"
-                    android:textSize="15sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/folder_name_length"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="새 폴더" />
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <!-- TODO 폴더 이미지 삭제 고려 중 -->
+                    <!--                <de.hdodenhof.circleimageview.CircleImageView-->
+                    <!--                    android:id="@+id/folder_image"-->
+                    <!--                    android:layout_width="40dp"-->
+                    <!--                    android:layout_height="40dp"-->
+                    <!--                    android:src="@mipmap/ic_main"-->
+                    <!--                    app:layout_constraintStart_toStartOf="parent"-->
+                    <!--                    app:layout_constraintTop_toTopOf="parent" />-->
+
+                    <EditText
+                        android:id="@+id/folder_name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/spacing12"
+                        android:background="@null"
+                        android:fontFamily="@font/nanum_square_b"
+                        android:hint="@string/folder_add_dialog_detail"
+                        android:maxLength="10"
+                        android:onTextChanged="@{viewModel::onFolderNameTextChanged}"
+                        android:paddingVertical="@dimen/spacing12"
+                        android:text="@{viewModel.folderName}"
+                        android:textColor="@color/gray_700"
+                        android:textSize="15sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/folder_name_length"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="새 폴더" />
+
+                    <TextView
+                        android:id="@+id/folder_name_length"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nanum_square_r"
+                        android:maxLength="10"
+                        android:text="@{String.format(@string/folder_add_dialog_folder_name_length_format, viewModel.folderName.length())}"
+                        android:textColor="@color/gray_700"
+                        android:textSize="15sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="7/10글자" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/black"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
-                    android:id="@+id/folder_name_length"
+                    android:id="@+id/folder_name_detail_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/nanum_square_r"
-                    android:maxLength="10"
-                    android:text="@{String.format(@string/folder_add_dialog_folder_name_length_format, viewModel.folderName.length())}"
-                    android:textColor="@color/gray_700"
+                    android:text="@string/folder_name_already_exist_toast_text"
+                    android:textColor="@color/green_700"
+                    android:textSize="12sp"
+                    android:visibility="@{viewModel.isExistFolderName == true ? View.VISIBLE : View.INVISIBLE}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/folder_name_container" />
+
+                <Button
+                    android:id="@+id/add"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/selector_dialog_yes_button_background"
+                    android:enabled="@{viewModel.folderName.length() > 0}"
+                    android:fontFamily="@font/nanum_square_eb"
+                    android:outlineProvider="none"
+                    android:text="@{viewModel.editMode == true ? @string/edit : @string/add}"
+                    android:textColor="@color/selector_dialog_yes_button_text_color"
                     android:textSize="15sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="7/10글자" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/folder_name_detail_text" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <TextView
-                android:id="@+id/folder_name_detail_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/nanum_square_r"
-                android:text="@string/folder_name_already_exist_toast_text"
-                android:textColor="@color/green_700"
-                android:textSize="12sp"
-                android:visibility="@{viewModel.isExistFolderName == true ? View.VISIBLE : View.INVISIBLE}"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/folder_name_container" />
-
-            <Button
-                android:id="@+id/add"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/selector_dialog_yes_button_background"
-                android:enabled="@{viewModel.folderName.length() > 0}"
-                android:fontFamily="@font/nanum_square_eb"
-                android:outlineProvider="none"
-                android:text="@{viewModel.editMode == true ? @string/edit : @string/add}"
-                android:textColor="@color/selector_dialog_yes_button_text_color"
-                android:textSize="15sp"
-                app:layout_constraintTop_toBottomOf="@id/folder_name_detail_text" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
